@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.6 2005-05-05 00:26:19 achu Exp $
+## $Id: Makefile.am,v 1.7 2005-05-05 22:20:54 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -11,7 +11,11 @@ man3_MANS = cerebro_handle_create.3 \
 	    cerebro_errnum.3 \
 	    cerebro_strerror.3 \
 	    cerebro_errormsg.3 \
-	    cerebro_perror.3
+	    cerebro_perror.3 \
+	    cerebro_load_config.3 \
+	    cerebro_unload_config.3 \
+	    cerebro_load_clusterlist_module.3 \
+	    cerebro_unload_clusterlist_module.3
 
 man5_MANS = cerebro.conf.5
  
@@ -24,5 +28,9 @@ EXTRA_DIST = cerebro.1 \
 	     cerebro_strerror.3 \
 	     cerebro_errormsg.3 \
 	     cerebro_perror.3 \
+	     cerebro_load_config.3 \
+	     cerebro_unload_config.3 \
+	     cerebro_load_clusterlist_module.3 \
+	     cerebro_unload_clusterlist_module.3 \
              cerebro.conf.5 \
              cerebrod.8
