@@ -1,25 +1,29 @@
 \."#############################################################################
-\."$Id: cerebro_handle_destroy.3,v 1.3 2005-05-05 22:20:54 achu Exp $
+\."$Id: cerebro_load_clusterlist_module.3,v 1.1 2005-05-05 22:20:54 achu Exp $
 \."#############################################################################
-.TH CEREBRO_HANDLE_DESTROY 3 "May 2005" "LLNL" "LIBCEREBRO"
+.TH CEREBRO_LOAD_CLUSTERLIST_MODULE 3 "May 2005" "LLNL" "LIBCEREBRO"
 .SH "NAME"
-cerebro_handle_destroy \- destroys a cerebro handle
+cerebro_load_clusterlist_module \- load clusterlist module
 .SH "SYNOPSIS"
 .B #include <cerebro.h>
 .sp
-.BI "int cerebro_handle_destroy(cerebro_t handle);"
+.BI "int cerebro_load_clusterlist_module(cerebro_t handle);"
 .br
 .SH "DESCRIPTION"
-\fBcerebro_handle_destroy()\fR destroys the cerebro handle
-pointed to by \fIhandle\fR and frees all allocated memory associated
-with it.
+\fBcerebro_load_clusterlist_module()\fR loads clusterlist module data into
+the cerebro_t handle.  Clusterlist modules are searched for in the
+.B Cerebro
+package library directory, @CEREBROD_MODULE_DIR@.  If a module cannot
+be found, a default module will be loaded.
+
+For more information on clusterlist modules see XXX.
 .br
 .SH "RETURN VALUES"
 On success, 0 is returned.  On error, -1 is returned, and an error
 code is returned in \fIhandle\fR.  The error code can be retrieved via
-.BR cerebro_errnum (3), 
-and a description of the error code can be retrieved via 
-.BR cerebro_strerror (3).  
+.BR cerebro_errnum (3),
+and a description of the error code can be retrieved via
+.BR cerebro_strerror (3).
 .br
 .SH "ERRORS"
 .TP
@@ -28,7 +32,7 @@ The handle parameter is NULL.  The cerebro_t handle must be created
 with
 .BR cerebro_handle_create (3).
 .TP
-.B CEREBRO_ERR_MAGIC_NUMBER 
+.B CEREBRO_ERR_MAGIC_NUMBER
 \fIhandle\fR has an incorrect magic number.  \fIhandle\fR does not
 point to a cerebro_t handle or \fIhandle\fR has already been
 destroyed.
@@ -42,4 +46,5 @@ An internal system error occurred.
 .SH "FILES"
 /usr/include/cerebro.h
 .SH "SEE ALSO"
-cerebro_handle_create(3), cerebro_errnum(3), cerebro_strerror(3)
+cerebro_handle_create(3), cerebro_unload_clusterlist_module(3), cerebro_errnum(3),
+cerebro_strerror(3), cerebro.conf(5)
