@@ -1,0 +1,58 @@
+\."#############################################################################
+\."$Id: cerebro_load_config.3,v 1.1 2005-05-05 22:20:54 achu Exp $
+\."#############################################################################
+.TH CEREBRO_LOAD_CONFIG 3 "May 2005" "LLNL" "LIBCEREBRO"
+.SH "NAME"
+cerebro_load_config \- load configuration data
+.SH "SYNOPSIS"
+.B #include <cerebro.h>
+.sp
+.BI "int cerebro_load_config(cerebro_t handle);"
+.br
+.SH "DESCRIPTION"
+\fBcerebro_load_config()\fR loads config data into the cerebro_t
+handle.
+
+It searches for a cerebro configuration module then a cerebro
+configuration file, loading the configuration from either that it may
+find.  If both a configuration module and configuration file are
+found, the configuration from the file takes precedence.
+
+The configuration data loaded may affect the behavior of
+other aspects of the libcerebro library. See 
+.BR cerebro.conf(5)
+for details on the various configuration options that can be set.
+.br
+.SH "RETURN VALUES"
+On success, 0 is returned.  On error, -1 is returned, and an error
+code is returned in \fIhandle\fR.  The error code can be retrieved via
+.BR cerebro_errnum (3),
+and a description of the error code can be retrieved via
+.BR cerebro_strerror (3).
+.br
+.SH "ERRORS"
+.TP
+.B CEREBRO_ERR_NULLHANDLE
+The handle parameter is NULL.  The cerebro_t handle must be created
+with
+.BR cerebro_handle_create (3).
+.TP
+.B CEREBRO_ERR_MAGIC_NUMBER
+\fIhandle\fR has an incorrect magic number.  \fIhandle\fR does not
+point to a cerebro_t handle or \fIhandle\fR has already been
+destroyed.
+.TP
+.B CEREBRO_ERR_CONFIG_FILE
+A config file error occurred.
+.TP
+.B CEREBRO_ERR_CONFIG_MODULE
+A config module error occurred.
+.TP
+.B CEREBRO_ERR_INTERNAL
+An internal system error occurred.
+.br
+.SH "FILES"
+/usr/include/cerebro.h
+.SH "SEE ALSO"
+cerebro_unload_config(3), cerebro_errnum(3), cerebro_strerror(3),
+cerebro.conf(5)
