@@ -1,25 +1,24 @@
 \."#############################################################################
-\."$Id: cerebro_handle_destroy.3,v 1.3 2005-05-05 22:20:54 achu Exp $
+\."$Id: cerebro_unload_config.3,v 1.1 2005-05-05 22:20:54 achu Exp $
 \."#############################################################################
-.TH CEREBRO_HANDLE_DESTROY 3 "May 2005" "LLNL" "LIBCEREBRO"
+.TH CEREBRO_UNLOAD_CONFIG 3 "May 2005" "LLNL" "LIBCEREBRO"
 .SH "NAME"
-cerebro_handle_destroy \- destroys a cerebro handle
+cerebro_unload_config \- unload configuration data
 .SH "SYNOPSIS"
 .B #include <cerebro.h>
 .sp
-.BI "int cerebro_handle_destroy(cerebro_t handle);"
+.BI "int cerebro_unload_config(cerebro_t handle);"
 .br
 .SH "DESCRIPTION"
-\fBcerebro_handle_destroy()\fR destroys the cerebro handle
-pointed to by \fIhandle\fR and frees all allocated memory associated
-with it.
+\fBcerebro_unload_config()\fR unloads the config data 
+stored in a cerebro_t handle.
 .br
 .SH "RETURN VALUES"
 On success, 0 is returned.  On error, -1 is returned, and an error
 code is returned in \fIhandle\fR.  The error code can be retrieved via
-.BR cerebro_errnum (3), 
-and a description of the error code can be retrieved via 
-.BR cerebro_strerror (3).  
+.BR cerebro_errnum (3),
+and a description of the error code can be retrieved via
+.BR cerebro_strerror (3).
 .br
 .SH "ERRORS"
 .TP
@@ -28,18 +27,12 @@ The handle parameter is NULL.  The cerebro_t handle must be created
 with
 .BR cerebro_handle_create (3).
 .TP
-.B CEREBRO_ERR_MAGIC_NUMBER 
+.B CEREBRO_ERR_MAGIC_NUMBER
 \fIhandle\fR has an incorrect magic number.  \fIhandle\fR does not
 point to a cerebro_t handle or \fIhandle\fR has already been
 destroyed.
-.TP
-.B CEREBRO_ERR_CLUSTERLIST_MODULE
-A clusterlist module error occurred.
-.TP
-.B CEREBRO_ERR_INTERNAL
-An internal system error occurred.
 .br
 .SH "FILES"
 /usr/include/cerebro.h
 .SH "SEE ALSO"
-cerebro_handle_create(3), cerebro_errnum(3), cerebro_strerror(3)
+cerebro_load_config(3), cerebro_errnum(3), cerebro_strerror(3)
